--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
   app:
     build: .
-    container_name: personal_assistant_app
+    container_name: assist-backed-app
     restart: always
     ports:
-      - "8002:8002"
+      - "9000:9000"
     volumes:
       - ./static:/app/static
       - ./log:/app/log
